--- a/compose.yaml
+++ b/compose.yaml
@@ -1,28 +1,21 @@
 services:
-    lms:
-        image: lmscommunity/lyrionmusicserver
-        volumes:
-            - /share/Container/app-data/lms-config/:/config:rw
-            - /share/Multimedia/Music/:/mnt/fritz.nas/5TB/music:ro
-            - /share/Multimedia/Playlists/LMS/:/mnt/fritz.nas/5TB/playlist:rw
-        ports:
-            - "9000:9000"
-            - "9090:9090"
-            - "3483:3483/udp"
-            - "3483:3483/tcp"
-
-
-services:
-    lms:
-        image: lmscommunity/lyrionmusicserver
-        volumes:
-            - /mnt/fritz.nas/5TB/config:/config:rw
-            - /mnt/fritz.nas/5TB/music:/music:ro
-            - /mnt/fritz.nas/5TB/playlist:/playlist:rw
-        ports:
-            - "9000:9000"
-            - "9090:9090"
-            - "3483:3483/udp"
-            - "3483:3483/tcp"
-
+  lms:
+    container_name: lms
+    image: lmscommunity/lyrionmusicserver
+    #user: "1000:1000"
+    volumes:
+      # config creates problems with chown and mkdir. I can see the logs only inside the container
+      #- /mnt/fritz.nas/5TB/config/:/config:rw
+      - /mnt/fritz.nas/5TB/music/:/music:ro
+      - /mnt/fritz.nas/5TB/playlist/:/playlist:rw
+      - /etc/localtime:/etc/localtime:ro
+      - /etc/timezone:/etc/timezone:ro
+    ports:
+      - 9000:9000/tcp
+      - 9090:9090/tcp
+      - 3483:3483/tcp
+      - 3483:3483/udp
+    environment:
+      - HTTP_PORT=9000
+    restart: always
 
