--- a/compose_dell.yaml
+++ b/compose_dell.yaml
@@ -35,3 +35,18 @@ services:
     extra_hosts:
       - 'host.docker.internal:host-gateway'
 
+
+  webcam-app:
+    build: .
+    volumes:
+      - ./output:/app/output
+      #- ${XAUTHORITY}:${XAUTHORITY}
+      - /tmp/.X11-unix:/tmp/.X11-unix:rw
+    environment:
+      - DISPLAY=${DISPLAY}
+      #- XAUTHORITY=${XAUTHORITY}
+    devices:
+      - /dev/video0:/dev/video0
+    stdin_open: true
+    tty: true
+
